# Node-Based-Image-Manipulation

./: CMakeLists.txt  README.md
libs/: glad.h  glfw3.h
src/: main.cpp
src/graph/: Node.hpp  NodeGraph.cpp  NodeGraph.hpp
src/gui/: NodeGUIManager.cpp  NodeGUIManager.hpp
src/nodes/: BlendNode.cpp  BlendNode.hpp  BlurNode.cpp  BlurNode.hpp  BrightnessContrastNode.cpp  BrightnessContrastNode.hpp  ColorChannelSplitterNode.cpp  ColorChannelSplitterNode.hpp  ConvolutionFilterNode.cpp  ConvolutionFilterNode.hpp  EdgeDetectionNode.cpp  EdgeDetectionNode.hpp  ImageInputNode.cpp  ImageInputNode.hpp  NoiseGenerationNode.cpp  NoiseGenerationNode.hpp  OutputNode.cpp  OutputNode.hpp  ThresholdNode.cpp  ThresholdNode.hpp
